--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.DS_Store
+
 # Gradle files
 .gradle/
 build/
@@ -31,3 +33,6 @@ google-services.json
 
 # Android Profiling
 *.hprof
+
+# dyn libs
+jniLibs/
